examples/bad/ERROR_NOT_A_RECORD/nat_is_not_a_record.st
language core;
extend with #records;

fn main(n : Nat) -> Nat {
  return 0.fst
}

//ERROR_NOT_A_RECORD
